--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
  
   </div>
   <div class="zone blue grid-wrapper">
-    <div class="box zone"><img src="./img/PW.jpeg"></div>
-    <div class="box zone"><img src="./img/ML.jpeg"></div>
-    <div class="box zone"><img src="./img/monitor_settings_2.png"></div>
-    <div class="box zone"><img src="./img/server_3.png"></div>
-    <div class="box zone"><img src="./img/data_storage_2_2.png"></div>
-    <div class="box zone"><img src="./img/monitor_coding_2.png"></div>
-    <div class="box zone"><img src="./img/desktop_analytics_2.png"></div>
-    <div class="box zone"><img src="./img/server_safe_2.png"></div>
+    <div class="box zone"><img src="./PW.jpeg"></div>
+    <div class="box zone"><img src="./ML.jpeg"></div>
+    <div class="box zone"><img src="./monitor_settings_2.png"></div>
+    <div class="box zone"><img src="./server_3.png"></div>
+    <div class="box zone"><img src="./data_storage_2_2.png"></div>
+    <div class="box zone"><img src="./monitor_coding_2.png"></div>
+    <div class="box zone"><img src="./desktop_analytics_2.png"></div>
+    <div class="box zone"><img src="./server_safe_2.png"></div>
   </div>
   <footer class="zone yellow">made by z => m</footer>
 </div>
