--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
   </nav>
   <div class="container zone red">
-  <div class="pull"> <img src="./img/pp.jpeg"></div>  
+  <div class="pull"> <img src="./pp.jpeg"></div>  
   KDEduTech
  
   </div>
